// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonElement renders a button with custom styles 1`] = `
<div
  className="css-1wlrtcl-ButtonElement"
>
  <button
    className="css-1wth4m0-ButtonElement btn btn-primary"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "boxShadow": "none",
        "cursor": "pointer",
        "display": "flex",
        "justifyContent": "center",
        "maxWidth": "100%",
      }
    }
    type="button"
  >
    <div
      style={
        Object {
          "display": "flex",
          "position": "relative",
        }
      }
    >
      <span
        className="css-1k1lbqh-generateNodes"
        onClick={[Function]}
      >
        Hello World!
      </span>
    </div>
  </button>
</div>
`;

exports[`ButtonElement renders a button with plain text 1`] = `
<div
  className="css-1wlrtcl-ButtonElement"
>
  <button
    className="css-1wth4m0-ButtonElement btn btn-primary"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "boxShadow": "none",
        "cursor": "pointer",
        "display": "flex",
        "justifyContent": "center",
        "maxWidth": "100%",
      }
    }
    type="button"
  >
    <div
      style={
        Object {
          "display": "flex",
          "position": "relative",
        }
      }
    >
      <span
        className="css-enkqi-generateNodes"
        onClick={[Function]}
      >
        Hello World!
      </span>
    </div>
  </button>
</div>
`;

exports[`ButtonElement renders an empty Button element 1`] = `
<div
  className="css-1wlrtcl-ButtonElement"
>
  <button
    className="css-jnnik-ButtonElement btn btn-primary"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "boxShadow": "none",
        "cursor": "pointer",
        "display": "flex",
        "justifyContent": "center",
        "maxWidth": "100%",
      }
    }
    type="button"
  >
    <div
      style={
        Object {
          "display": "flex",
          "position": "relative",
        }
      }
    >
      <span
        className="css-enkqi-generateNodes"
        onClick={[Function]}
      >
        

      </span>
    </div>
  </button>
</div>
`;
